--- a/Node-Server/package.json
+++ b/Node-Server/package.json
@@ -9,7 +9,14 @@
     "nodemon": "^2.0.6",
     "querystring": "^0.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^15.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
